--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ xcode_scheme: RuntimeKit
 
 osx_image: xcode8.3
 
-before_scripts:
-  - set -o pipefail
 
-script: xcodebuild -scheme RuntimeKit | xcpretty
-script: xcodebuild -scheme RuntimeKitTests test | xcpretty
+script: set -o pipefail && xcodebuild -scheme RuntimeKit | xcpretty
+script: set -o pipefail && xcodebuild -scheme RuntimeKitTests test | xcpretty
